<resources>
   <string name="app_name">SnsTemplate</string>

   <string name="c_login">로그인</string>
   <string name="c_login_fb">Facebook으로 로그인</string>
   <string name="c_login_w">로그인중 입니다.</string>
   <string name="c_logout">로그아웃</string>
   <string name="c_join">회원가입</string>
   <string name="c_join_w">회원가입중 입니다.</string>
   <string name="c_comfirm">승인</string>
   <string name="c_ok">확인</string>
   <string name="c_complete">완료</string>
   <string name="c_cancel">취소</string>
   <string name="c_pw">비밀번호</string>
   <string name="c_next">다음</string>
   <string name="c_previous">이전</string>
   <string name="c_need_search_word">검색어를 입력하세요.</string>
   <string name="c_restore">복구</string>
   <string name="c_resetdatas">초기화</string>
   <string name="c_edit">수정</string>
   <string name="c_delete">삭제</string>
   <string name="c_input">입력</string>
   <string name="c_update">업데이트</string>
   <string name="c_following">팔로잉</string>
   <string name="c_follow">팔로우</string>
   <string name="c_close">닫기</string>
   <string name="c_load">불러오기</string>
   <string name="c_male">남자</string>
   <string name="c_female">여자</string>
   <string name="c_like">좋아요</string>
   <string name="c_add">추가</string>
   <string name="c_send">보내기</string>
   <string name="c_continue">계속하기</string>
   <string name="c_exit">나가기</string>
   <string name="c_email">이메일</string>
   <string name="c_password">비밀번호</string>
   <string name="c_password_re">비밀번호 재입력</string>
   <string name="c_skip">SKIP</string>

   <string name="error_disabled_services_title">오류</string>
   <string name="error_disabled_servcies_message">현재 서버를 사용 할 수 없습니다.\n나중에 다시 시도해 주세요.</string>

   <string name="error_lastest_appversion_title">업데이트</string>
   <string name="error_lastest_appversion_message">최신 버전으로 앱을\n업데이트 해야 합니다.</string>

   <string name="error_wrong_login_infos_title">오류</string>
   <string name="error_wrong_login_infos_message">잘못된 로그인 정보입니다.\n다시 로그인해 주세요.</string>

   <string name="error_not_joined_user_title">오류</string>
   <string name="error_not_joined_user_message">존재하지 않는 유저입니다.\n가입 화면으로 이동할까요?</string>

   <string name="error_network_common_title">오류</string>
   <string name="error_network_common_message">통신중 오류가 발생했습니다.\n다시 시도해 주세요.</string>
   <string name="error_network_disabled">네트워크에 연결되지 않았습니다.\n연결 후 다시 시도해 주세요.</string>

   <string name="error_input_email_title">오류</string>
   <string name="error_input_email_message">이메일을 입력해 주세요.</string>
   <string name="error_input_pw_message">비밀번호를 입력해 주세요.</string>

   <string name="find_pw_desc1">비밀번호를 잊으셨나요?\n</string>
   <string name="find_pw_desc2">여기</string>
   <string name="find_pw_desc3">를 눌러 비밀번호를 재 설정 하세요.</string>

   <string name="sign_up_desc">계정이 없으신가요? 가입 하기</string>

   <string name="c_dummy_short_1">Lorem ipsum dolor sit amet, id purus vel dui imperdiet.</string>
   <string name="c_dummy_short_2">Vitae ut et facilisis odio magna,</string>
   <string name="c_dummy_short_3">odio eu vel id, tincidunt pede nisl maecenas et,</string>

</resources>
