<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_lgr01"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

   <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center">

      <LinearLayout
         android:id="@+id/login_container_inputs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">

         <kr.swkang.snstemplate.utils.widgets.ClearableEditText
            android:id="@+id/login_et_email"
            style="@style/LoginEditText"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/c_email"
            android:inputType="textEmailAddress"/>

         <kr.swkang.snstemplate.utils.widgets.ClearableEditText
            android:id="@+id/login_et_password"
            style="@style/LoginEditText"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="26dp"
            android:hint="@string/c_password"
            android:inputType="textPassword"/>

         <kr.swkang.snstemplate.utils.widgets.StateButton
            android:id="@+id/login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="26dp"
            app:sb_btn_paddingBottom="12dp"
            app:sb_btn_paddingLeft="34dp"
            app:sb_btn_paddingRight="34dp"
            app:sb_btn_paddingTop="12dp"
            app:sb_btn_selector="@drawable/btn_c_white"
            app:sb_btn_text_disabled="@string/c_login"
            app:sb_btn_text_enable="@string/c_login"
            app:sb_btn_text_wait="@string/c_login_w"
            app:sb_btn_textcolor="@drawable/btn_c_white_text"
            app:sb_btn_textsize="15sp"
            app:sb_progressbar_color="@color/white"
            app:sb_progressbar_visible="true"
            app:sb_state="enable"/>
      </LinearLayout>

      <!-- somekind of app Logo images' here -->

      <!-- find pw -->
      <kr.swkang.spannabletextview.SpannableTextView
         android:id="@+id/login_stv_find_pw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/login_container_inputs"
         android:layout_marginTop="30dp"
         android:gravity="center"
         android:lineSpacingExtra="3dp"
         android:textColor="@color/transparent_heavy_white"/>

      <!-- facebook login button -->

   </RelativeLayout>

</ScrollView>